DSFR : - Import CSS / Styles - Adds Configuration

--- a/resources/views/inertia_layout.edge
+++ b/resources/views/inertia_layout.edge
@@ -15,6 +15,32 @@
       rel="stylesheet"
     />
 
+    <!--<link rel="preload" href="./node_modules/@codegouvfr/react-dsfr/dsfr/fonts/Marianne-Light.woff2" as="font" crossorigin="anonymous" />-->
+    <!--<link rel="preload" href="./node_modules/@codegouvfr/react-dsfr/dsfr/fonts/Marianne-Light_Italic.woff2" as="font" crossorigin="anonymous" />-->
+    <link
+      rel="preload"
+      href="./node_modules/@codegouvfr/react-dsfr/dsfr/fonts/Marianne-Regular.woff2"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <!--<link rel="preload" href="./node_modules/@codegouvfr/react-dsfr/dsfr/fonts/Marianne-Regular_Italic.woff2" as="font" crossorigin="anonymous" />-->
+    <link
+      rel="preload"
+      href="./node_modules/@codegouvfr/react-dsfr/dsfr/fonts/Marianne-Medium.woff2"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <!--<link rel="preload" href="./node_modules/@codegouvfr/react-dsfr/dsfr/fonts/Marianne-Medium_Italic.woff2" as="font" crossorigin="anonymous" />-->
+    <link
+      rel="preload"
+      href="./node_modules/@codegouvfr/react-dsfr/dsfr/fonts/Marianne-Bold.woff2"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <!--<link rel="preload" href="./node_modules/@codegouvfr/react-dsfr/dsfr/fonts/Marianne-Bold_Italic.woff2" as="font" crossorigin="anonymous" />-->
+    <!--<link rel="preload" href="./node_modules/@codegouvfr/react-dsfr/dsfr/fonts/Spectral-Regular.woff2" as="font" crossorigin="anonymous" />-->
+    <!--<link rel="preload" href="./node_modules/@codegouvfr/react-dsfr/dsfr/fonts/Spectral-ExtraBold.woff2" as="font" crossorigin="anonymous" />-->
+
     <style>
       :root {
         --sand-1: #fdfdfc;
