Inertia: - Fix font - Fix title

--- a/resources/views/inertia_layout.edge
+++ b/resources/views/inertia_layout.edge
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title inertia>
-      VizEau
+      Viz'Eau
     </title>
 
     @stack('dumper')
@@ -15,7 +15,7 @@
     @vite(['inertia/app/app.tsx', `inertia/pages/${page.component}.tsx`])
   </head>
 
-  <body class="min-h-screen w-screen font-sans">
+  <body class="min-h-screen w-screen">
     @inertia()
   </body>
 
