--- a/inertia/ui/MajorSelector/index.css
+++ b/inertia/ui/MajorSelector/index.css
@@ -1,8 +1,8 @@
 .hover-effect:hover {
   background-color: var(--background-default-grey) !important;
-  transform: scale(1.05);
+  transform: scale(1.02);
 }
 
 .hover-effect {
-  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
