--- a/inertia/ui/MajorSelector/index.css
+++ b/inertia/ui/MajorSelector/index.css
@@ -4,5 +4,7 @@
 }
 
 .hover-effect {
-  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1), background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  transition:
+    transform 0.3s cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
