--- a/inertia/ui/Loader/spinner-animation.css
+++ b/inertia/ui/Loader/spinner-animation.css
@@ -3,3 +3,37 @@
     transform: rotate(360deg);
   }
 }
+
+.dot-anim {
+  display: inline-flex;
+  margin-left: 4px;
+  vertical-align: middle;
+}
+
+.dot {
+  display: inline-block;
+  margin: 0 1px;
+  border-radius: 50%;
+  opacity: 0.3;
+  animation: dotFlashing 1.2s infinite linear;
+}
+
+.dot:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.dot:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+@keyframes dotFlashing {
+  0% {
+    opacity: 0.3;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.3;
+  }
+}
