--- a/inertia/components/map/styles/map.css
+++ b/inertia/components/map/styles/map.css
@@ -1,5 +1,6 @@
 @keyframes glow {
-  0%, 100% {
+  0%,
+  100% {
     box-shadow:
       0 0 0 2px rgb(29, 124, 219, 1),
       0 0 3px rgba(29, 124, 219, 0.4),
