--- a/inertia/css/app.css
+++ b/inertia/css/app.css
@@ -16,16 +16,16 @@ body {
   0%,
   100% {
     box-shadow:
-      0 0 0 2px rgb(29, 124, 219, 1),
+      0 0 0 2px rgba(29, 124, 219, 1),
       0 0 3px rgba(29, 124, 219, 0.4),
-      0 0 5px rgb(29, 124, 219, 0.2);
+      0 0 5px rgba(29, 124, 219, 0.2);
   }
   50% {
     box-shadow:
-      0 0 0 2px rgb(29, 124, 219, 0.6),
-      0 0 5px rgb(29, 124, 219, 0.8),
-      0 0 15px rgb(29, 124, 219, 0.4),
-      0 0 20px rgb(29, 124, 219, 0.2);
+      0 0 0 2px rgba(29, 124, 219, 0.6),
+      0 0 5px rgba(29, 124, 219, 0.8),
+      0 0 15px rgba(29, 124, 219, 0.4),
+      0 0 20px rgba(29, 124, 219, 0.2);
   }
 }
 
